--- a/EmployeeTaskManagement/EmployeeTaskManagement/appsettings.Development.json
+++ b/EmployeeTaskManagement/EmployeeTaskManagement/appsettings.Development.json
@@ -4,5 +4,15 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+
+  "ConnectionStrings": {
+    "DataConnection": "data source=localhost;initial catalog=task;integrated security=True;multipleactiveresultsets=False;Encrypt=False;"
+  },
+  
+  "Jwt": {
+    "Secret": "qMCdFDQuF23RV1Y-1Gq9L3cF3VmuFwVbam4fMTdAfpo",
+    "Audience": "414e1927a3884f68abc79f7283837fd1"
+
   }
 }
