--- a/EmployeeTaskManagement/EmployeeTaskManagement/appsettings.json
+++ b/EmployeeTaskManagement/EmployeeTaskManagement/appsettings.json
@@ -5,5 +5,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "DataConnection": "data source=localhost;initial catalog=task;integrated security=True;multipleactiveresultsets=False;Encrypt=False;"
+  },
+  "Jwt": {
+    "Key": "YourSuperSecretKeyHere",
+    "Issuer": "YourApp",
+    "Audience": "YourAppUsers"
+  }
 }
