--- a/EmployeeTaskManagement/EmployeeTaskManagement.Core/EmployeeTaskManagement.Core.csproj
+++ b/EmployeeTaskManagement/EmployeeTaskManagement.Core/EmployeeTaskManagement.Core.csproj
@@ -7,14 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Adstractions\IManagers\" />
-    <Folder Include="Adstractions\IRepositories\" />
-    <Folder Include="Managers\" />
     <Folder Include="Models\" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.2" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.1" />
+	    <ProjectReference Include="..\TaskManagement.Core\TaskManagement.Core.csproj" />
+    <ProjectReference Include="..\TaskManagement.Infrastructure\TaskManagement.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
