--- a/EmployeeTaskManagement/EmployeeTaskManagement.Infrastructure/EmployeeTaskManagement.Infrastructure.csproj
+++ b/EmployeeTaskManagement/EmployeeTaskManagement.Infrastructure/EmployeeTaskManagement.Infrastructure.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Repositories\" />
+    <ProjectReference Include="..\EmployeeTaskManagement.Core\EmployeeTaskManagement.Core.csproj" />
   </ItemGroup>
 
 </Project>
