--- a/EmployeeTaskManagement/TaskManagement.Core/TaskManagement.Core.csproj
+++ b/EmployeeTaskManagement/TaskManagement.Core/TaskManagement.Core.csproj
@@ -8,7 +8,10 @@
 
   <ItemGroup>
     <Folder Include="Models\" />
-    <Folder Include="Adstractions\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    
   </ItemGroup>
 
 </Project>
