--- a/EmployeeTaskManagement/TaskManagement.Infrastructure/TaskManagement.Infrastructure.csproj
+++ b/EmployeeTaskManagement/TaskManagement.Infrastructure/TaskManagement.Infrastructure.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.1">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -16,7 +17,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\EmployeeTaskManagement.Core\EmployeeTaskManagement.Core.csproj" />
     <ProjectReference Include="..\TaskManagement.Core\TaskManagement.Core.csproj" />
   </ItemGroup>
 
